<resources>
    <string name="app_name">Alamemo</string>
    <string name="app_name_add_kor">Alamemo - 알람메모</string>
    <string name="text">텍스트</string>
    <string name="memo_emoji">📝</string>
    <string name="today_emoji">📋</string>
    <string name="repeat_emoji">⏰</string>
    <string name="finish_emoji">🏁</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="sry_making">죄송합니다.\n아직 해당 기능을\n이용하실 수 없습니다.</string>
    <string name="splash_top_text">알람&amp;메모</string>
    <string name="splash_bottom_text">Alamemo</string>
    <string name="one_more_back_exit">뒤로가기를 한번 더 누르시면 종료됩니다.</string>
    <string name="no_schedule">🙅‍♂‍📋📝🙅\n등록된\n일정이나 메모가\n없습니다!</string>
    <string name="memo">메모</string>
    <string name="today_schedule">일정</string>
    <string name="repeat_schedule">반복 일정</string>
    <string name="finish_schedule">종료</string>
    <string name="add_memo">메모/일정 추가</string>
    <string name="add_detail_memo">세부 메모/일정 추가</string>
    <string name="show_dialog">달력으로 보기(날짜)</string>
    <string name="type">유형</string>
    <string name="schedule">일정</string>
    <string name="date">날짜</string>
    <string name="repeat_day">반복 요일</string>
    <string name="fix_notify">상단바\n고정표기 사용</string>
    <string name="what_is_fix_notify">상단바 고정표기 사용이란?</string>
    <string name="use_alarm">알람기능\n사용</string>
    <string name="what_is_use_alarm">알람기능이란?</string>
    <string name="save">저장하기</string>
    <string name="use">사용</string>
    <string name="no_use">사용 안함</string>
    <string name="set_alarm_start_time">알람시작날짜\n설정</string>
    <string name="set_alarm_time">알람시간\n설정</string>
    <string name="memo_hint">추가할 메모/일정을 입력하세요.</string>
    <string name="warn_empty_title_message">메모를 입력해 주세요.</string>
    <string name="memo_save_complete">메모/일정 저장이 완료되었습니다.</string>
    <string name="detail_memo_save_complete">세부 메모/일정 저장이 완료되었습니다.</string>
    <string name="memo_modify_complete">메모/일정 수정이 완료되었습니다.</string>
    <string name="detail_memo_modify_complete">세부 메모/일정 수정이 완료되었습니다.</string>
    <string name="error">에러가 발생했습니다.</string>
    <string name="select_icon">아이콘을 선택해 주세요.</string>
    <string name="detail">세부 메모/일정</string>
    <string name="save_memo">이미지로\n일정 저장하기</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>
    <string name="before_one_week">일주일 전부터</string>
    <string name="before_three_day">삼일 전부터</string>
    <string name="before_one_day">하루 전부터</string>
    <string name="everyday">매일</string>
    <string name="delete_snackbar_cancel">삭제취소</string>
    <string name="delete_detail_memo_snackbar_message">세부 메모/일정이 삭제되었습니다.</string>
    <string name="delete_memo_snackbar_message">메모가 삭제되었습니다.\n세부 메모/일정도 삭제되었습니다.</string>
    <string name="notification_channel_id">alamemo_notification_channel_id</string>
    <string name="notification_channel_name" >alamemo_notification_channel</string>
    <string name="notification_today">오늘은 </string>
    <string name="notification_today_time_is"> 에 </string>
    <string name="notification_today_is_scheduled">이(가) 예정되어 있습니다!\n</string>
    <string name="notification_is">이(가) </string>
    <string name="notification_future_is_remain">일 전입니다!\n</string>
    <string name="notification_past_is_over">일 지났습니다!\n</string>
    <string name="notification_fix_notify_slash">- </string>
    <string name="notification_fix_notify_slash_include_line_enter">\n- </string>
    <string name="notification_boot">잊으신 메모는 없나요?\n여기를 눌러서 확인해보세요!</string>
    <string name="icon_face">😀 😃 😄 😁 😆 😅 😂 🤣 🥲 ☺️ 😊 😇 🙂 🙃 😉 😌 😍 🥰 😘 😗 😙 😚 😋 😛 😝 😜 🤪 🤨 🧐 🤓 😎 🥸 🤩 🥳 😏 😒 😞 😔 😟 😕 🙁 ☹️ 😣 😖 😫 😩 🥺 😢 😭 😤 😠 😡 🤬 🤯 😳 🥵 🥶 😱 😨 😰 😥 😓 🤗 🤔 🤭 🤫 🤥 😶 😐 😑 😬 🙄 😯 😦 😧 😮 😲 🥱 😴 🤤 😪 😵 🤐 🥴 🤢 🤮 🤧 😷 🤒 🤕 🤑 🤠 😈 👿 👹 👺 🤡 💩 👻 💀 ☠️ 👽 👾 🤖 🎃 😺 😸 😹 😻 😼 😽 🙀 😿 😾</string>
    <string name="icon_gesture">👋 🤚 🖐 ✋ 🖖 👌 🤌 🤏 ✌️ 🤞 🤟 🤘 🤙 👈 👉 👆 🖕 👇 ☝️ 👍 👎 ✊ 👊 🤛 🤜 👏 🙌 👐 🤲 🤝 🙏 ✍️ 💅 🤳 💪 🦾 🦵 🦿 🦶 👣 👂 🦻 👃 🫀 🫁 🧠 🦷 🦴 👀 👁 👅 👄 💋 🩸</string>
    <string name="icon_people">👶 👧 🧒 👦 👩 🧑 👨 👩‍🦱 🧑‍🦱 👨‍🦱 👩‍🦰 🧑‍🦰 👨‍🦰 👱‍♀️ 👱 👱‍♂️ 👩‍🦳 🧑‍🦳 👨‍🦳 👩‍🦲 🧑‍🦲 👨‍🦲 🧔 👵 🧓 👴 👲 👳‍♀️ 👳 👳‍♂️ 🧕 👮‍♀️ 👮 👮‍♂️ 👷‍♀️ 👷 👷‍♂️ 💂‍♀️ 💂 💂‍♂️ 🕵️‍♀️ 🕵️ 🕵️‍♂️ 👩‍⚕️ 🧑‍⚕️ 👨‍⚕️ 👩‍🌾 🧑‍🌾 👨‍🌾 👩‍🍳 🧑‍🍳 👨‍🍳 👩‍🎓 🧑‍🎓 👨‍🎓 👩‍🎤 🧑‍🎤 👨‍🎤 👩‍🏫 🧑‍🏫 👨‍🏫 👩‍🏭 🧑‍🏭 👨‍🏭 👩‍💻 🧑‍💻 👨‍💻 👩‍💼 🧑‍💼 👨‍💼 👩‍🔧 🧑‍🔧 👨‍🔧 👩‍🔬 🧑‍🔬 👨‍🔬 👩‍🎨 🧑‍🎨 👨‍🎨 👩‍🚒 🧑‍🚒 👨‍🚒 👩‍✈️ 🧑‍✈️ 👨‍✈️ 👩‍🚀 🧑‍🚀 👨‍🚀 👩‍⚖️ 🧑‍⚖️ 👨‍⚖️ 👰‍♀️ 👰 👰‍♂️ 🤵‍♀️ 🤵 🤵‍♂️ 👸 🤴 🥷 🦸‍♀️ 🦸 🦸‍♂️ 🦹‍♀️ 🦹 🦹‍♂️ 🤶 🧑‍🎄 🎅 🧙‍♀️ 🧙 🧙‍♂️ 🧝‍♀️ 🧝 🧝‍♂️ 🧛‍♀️ 🧛 🧛‍♂️ 🧟‍♀️ 🧟 🧟‍♂️ 🧞‍♀️ 🧞 🧞‍♂️ 🧜‍♀️ 🧜 🧜‍♂️ 🧚‍♀️ 🧚 🧚‍♂️ 👼 🤰 🤱 👩‍🍼 🧑‍🍼 👨‍🍼 🙇‍♀️ 🙇 🙇‍♂️ 💁‍♀️ 💁 💁‍♂️ 🙅‍♀️ 🙅 🙅‍♂️ 🙆‍♀️ 🙆 🙆‍♂️ 🙋‍♀️ 🙋 🙋‍♂️ 🧏‍♀️ 🧏 🧏‍♂️ 🤦‍♀️ 🤦 🤦‍♂️ 🤷‍♀️ 🤷 🤷‍♂️ 🙎‍♀️ 🙎 🙎‍♂️ 🙍‍♀️ 🙍 🙍‍♂️ 💇‍♀️ 💇 💇‍♂️ 💆‍♀️ 💆 💆‍♂️ 🧖‍♀️ 🧖 🧖‍♂️ 💅 🤳 💃 🕺 👯‍♀️ 👯 👯‍♂️ 🕴 👩‍🦽 🧑‍🦽 👨‍🦽 👩‍🦼 🧑‍🦼 👨‍🦼 🚶‍♀️ 🚶 🚶‍♂️ 👩‍🦯 🧑‍🦯 👨‍🦯 🧎‍♀️ 🧎 🧎‍♂️ 🏃‍♀️ 🏃 🏃‍♂️ 🧍‍♀️ 🧍 🧍‍♂️ 👭 🧑‍🤝‍🧑 👬 👫 👩‍❤️‍👩 💑 👨‍❤️‍👨 👩‍❤️‍👨 👩‍❤️‍💋‍👩 💏 👨‍❤️‍💋‍👨 👩‍❤️‍💋‍👨 👪 👨‍👩‍👦 👨‍👩‍👧 👨‍👩‍👧‍👦 👨‍👩‍👦‍👦 👨‍👩‍👧‍👧 👨‍👨‍👦 👨‍👨‍👧 👨‍👨‍👧‍👦 👨‍👨‍👦‍👦 👨‍👨‍👧‍👧 👩‍👩‍👦 👩‍👩‍👧 👩‍👩‍👧‍👦 👩‍👩‍👦‍👦 👩‍👩‍👧‍👧 👨‍👦 👨‍👦‍👦 👨‍👧 👨‍👧‍👦 👨‍👧‍👧 👩‍👦 👩‍👦‍👦 👩‍👧 👩‍👧‍👦 👩‍👧‍👧 🗣 👤 👥 🫂</string>
    <string name="icon_clothing_acc">🧳 🌂 ☂️ 🧵 🪡 🪢 🧶 👓 🕶 🥽 🥼 🦺 👔 👕 👖 🧣 🧤 🧥 🧦 👗 👘 🥻 🩴 🩱 🩲 🩳 👙 👚 👛 👜 👝 🎒 👞 👟 🥾 🥿 👠 👡 🩰 👢 👑 👒 🎩 🎓 🧢 ⛑ 🪖 💄 💍 💼</string>
    <string name="icon_animal_nature">🐶 🐱 🐭 🐹 🐰 🦊 🐻 🐼 🐻‍❄️ 🐨 🐯 🦁 🐮 🐷 🐽 🐸 🐵 🙈 🙉 🙊 🐒 🐔 🐧 🐦 🐤 🐣 🐥 🦆 🦅 🦉 🦇 🐺 🐗 🐴 🦄 🐝 🪱 🐛 🦋 🐌 🐞 🐜 🪰 🪲 🪳 🦟 🦗 🕷 🕸 🦂 🐢 🐍 🦎 🦖 🦕 🐙 🦑 🦐 🦞 🦀 🐡 🐠 🐟 🐬 🐳 🐋 🦈 🐊 🐅 🐆 🦓 🦍 🦧 🦣 🐘 🦛 🦏 🐪 🐫 🦒 🦘 🦬 🐃 🐂 🐄 🐎 🐖 🐏 🐑 🦙 🐐 🦌 🐕 🐩 🦮 🐕‍🦺 🐈 🐈‍⬛ 🪶 🐓 🦃 🦤 🦚 🦜 🦢 🦩 🕊 🐇 🦝 🦨 🦡 🦫 🦦 🦥 🐁 🐀 🐿 🦔 🐾 🐉 🐲 🌵 🎄 🌲 🌳 🌴 🪵 🌱 🌿 ☘️ 🍀 🎍 🪴 🎋 🍃 🍂 🍁 🍄 🐚 🪨 🌾 💐 🌷 🌹 🥀 🌺 🌸 🌼 🌻 🌞 🌝 🌛 🌜 🌚 🌕 🌖 🌗 🌘 🌑 🌒 🌓 🌔 🌙 🌎 🌍 🌏 🪐 💫 ⭐️ 🌟 ✨ ⚡️ ☄️ 💥 🔥 🌪 🌈 ☀️ 🌤 ⛅️ 🌥 ☁️ 🌦 🌧 ⛈ 🌩 🌨 ❄️ ☃️ ⛄️ 🌬 💨 💧 💦 ☔️ ☂️ 🌊 🌫</string>
    <string name="icon_food">🍏 🍎 🍐 🍊 🍋 🍌 🍉 🍇 🍓 🫐 🍈 🍒 🍑 🥭 🍍 🥥 🥝 🍅 🍆 🥑 🥦 🥬 🥒 🌶 🫑 🌽 🥕 🫒 🧄 🧅 🥔 🍠 🥐 🥯 🍞 🥖 🥨 🧀 🥚 🍳 🧈 🥞 🧇 🥓 🥩 🍗 🍖 🦴 🌭 🍔 🍟 🍕 🫓 🥪 🥙 🧆 🌮 🌯 🫔 🥗 🥘 🫕 🥫 🍝 🍜 🍲 🍛 🍣 🍱 🥟 🦪 🍤 🍙 🍚 🍘 🍥 🥠 🥮 🍢 🍡 🍧 🍨 🍦 🥧 🧁 🍰 🎂 🍮 🍭 🍬 🍫 🍿 🍩 🍪 🌰 🥜 🍯 🥛 🍼 🫖 ☕️ 🍵 🧃 🥤 🧋 🍶 🍺 🍻 🥂 🍷 🥃 🍸 🍹 🧉 🍾 🧊 🥄 🍴 🍽 🥣 🥡 🥢 🧂</string>
    <string name="icon_activity">⚽️ 🏀 🏈 ⚾️ 🥎 🎾 🏐 🏉 🥏 🎱 🪀 🏓 🏸 🏒 🏑 🥍 🏏 🪃 🥅 ⛳️ 🪁 🏹 🎣 🤿 🥊 🥋 🎽 🛹 🛼 🛷 ⛸ 🥌 🎿 ⛷ 🏂 🪂 🏋️‍♀️ 🏋️ 🏋️‍♂️ 🤼‍♀️ 🤼 🤼‍♂️ 🤸‍♀️ 🤸 🤸‍♂️ ⛹️‍♀️ ⛹️ ⛹️‍♂️ 🤺 🤾‍♀️ 🤾 🤾‍♂️ 🏌️‍♀️ 🏌️ 🏌️‍♂️ 🏇 🧘‍♀️ 🧘 🧘‍♂️ 🏄‍♀️ 🏄 🏄‍♂️ 🏊‍♀️ 🏊 🏊‍♂️ 🤽‍♀️ 🤽 🤽‍♂️ 🚣‍♀️ 🚣 🚣‍♂️ 🧗‍♀️ 🧗 🧗‍♂️ 🚵‍♀️ 🚵 🚵‍♂️ 🚴‍♀️ 🚴 🚴‍♂️ 🏆 🥇 🥈 🥉 🏅 🎖 🏵 🎗 🎫 🎟 🎪 🤹 🤹‍♂️ 🤹‍♀️ 🎭 🩰 🎨 🎬 🎤 🎧 🎼 🎹 🥁 🪘 🎷 🎺 🪗 🎸 🪕 🎻 🎲 ♟ 🎯 🎳 🎮 🎰 🧩</string>
    <string name="icon_travel_place">🚗 🚕 🚙 🚌 🚎 🏎 🚓 🚑 🚒 🚐 🛻 🚚 🚛 🚜 🦯 🦽 🦼 🛴 🚲 🛵 🏍 🛺 🚨 🚔 🚍 🚘 🚖 🚡 🚠 🚟 🚃 🚋 🚞 🚝 🚄 🚅 🚈 🚂 🚆 🚇 🚊 🚉 ✈️ 🛫 🛬 🛩 💺 🛰 🚀 🛸 🚁 🛶 ⛵️ 🚤 🛥 🛳 ⛴ 🚢 ⚓️ 🪝 ⛽️ 🚧 🚦 🚥 🚏 🗺 🗿 🗽 🗼 🏰 🏯 🏟 🎡 🎢 🎠 ⛲️ ⛱ 🏖 🏝 🏜 🌋 ⛰ 🏔 🗻 🏕 ⛺️ 🛖 🏠 🏡 🏘 🏚 🏗 🏭 🏢 🏬 🏣 🏤 🏥 🏦 🏨 🏪 🏫 🏩 💒 🏛 ⛪️ 🕌 🕍 🛕 🕋 ⛩ 🛤 🛣 🗾 🎑 🏞 🌅 🌄 🌠 🎇 🎆 🌇 🌆 🏙 🌃 🌌 🌉 🌁</string>
    <string name="icon_object">⌚️ 📱 📲 💻 ⌨️ 🖥 🖨 🖱 🖲 🕹 🗜 💽 💾 💿 📀 📼 📷 📸 📹 🎥 📽 🎞 📞 ☎️ 📟 📠 📺 📻 🎙 🎚 🎛 🧭 ⏱ ⏲ ⏰ 🕰 ⌛️ ⏳ 📡 🔋 🔌 💡 🔦 🕯 🪔 🧯 🛢 💸 💵 💴 💶 💷 🪙 💰 💳 💎 ⚖️ 🪜 🧰 🪛 🔧 🔨 ⚒ 🛠 ⛏ 🪚 🔩 ⚙️ 🪤 🧱 ⛓ 🧲 🔫 💣 🧨 🪓 🔪 🗡 ⚔️ 🛡 🚬 ⚰️ 🪦 ⚱️ 🏺 🔮 📿 🧿 💈 ⚗️ 🔭 🔬 🕳 🩹 🩺 💊 💉 🩸 🧬 🦠 🧫 🧪 🌡 🧹 🪠 🧺 🧻 🚽 🚰 🚿 🛁 🛀 🧼 🪥 🪒 🧽 🪣 🧴 🛎 🔑 🗝 🚪 🪑 🛋 🛏 🛌 🧸 🪆 🖼 🪞 🪟 🛍 🛒 🎁 🎈 🎏 🎀 🪄 🪅 🎊 🎉 🎎 🏮 🎐 🧧 ✉️ 📩 📨 📧 💌 📥 📤 📦 🏷 🪧 📪 📫 📬 📭 📮 📯 📜 📃 📄 📑 🧾 📊 📈 📉 🗒 🗓 📆 📅 🗑 📇 🗃 🗳 🗄 📋 📁 📂 🗂 🗞 📰 📓 📔 📒 📕 📗 📘 📙 📚 📖 🔖 🧷 🔗 📎 🖇 📐 📏 🧮 📌 📍 ✂️ 🖊 🖋 ✒️ 🖌 🖍 📝 ✏️ 🔍 🔎 🔏 🔐 🔒 🔓</string>
    <string name="icon_symbol">❤️ 🧡 💛 💚 💙 💜 🖤 🤍 🤎 💔 ❣️ 💕 💞 💓 💗 💖 💘 💝 💟 ☮️ ✝️ ☪️ 🕉 ☸️ ✡️ 🔯 🕎 ☯️ ☦️ 🛐 ⛎ ♈️ ♉️ ♊️ ♋️ ♌️ ♍️ ♎️ ♏️ ♐️ ♑️ ♒️ ♓️ 🆔 ⚛️ 🉑 ☢️ ☣️ 📴 📳 🈶 🈚️ 🈸 🈺 🈷️ ✴️ 🆚 💮 🉐 ㊙️ ㊗️ 🈴 🈵 🈹 🈲 🅰️ 🅱️ 🆎 🆑 🅾️ 🆘 ❌ ⭕️ 🛑 ⛔️ 📛 🚫 💯 💢 ♨️ 🚷 🚯 🚳 🚱 🔞 📵 🚭 ❗️ ❕ ❓ ❔ ‼️ ⁉️ 🔅 🔆 〽️ ⚠️ 🚸 🔱 ⚜️ 🔰 ♻️ ✅ 🈯️ 💹 ❇️ ✳️ ❎ 🌐 💠 Ⓜ️ 🌀 💤 🏧 🚾 ♿️ 🅿️ 🛗 🈳 🈂️ 🛂 🛃 🛄 🛅 🚹 🚺 🚼 ⚧ 🚻 🚮 🎦 📶 🈁 🔣 ℹ️ 🔤 🔡 🔠 🆖 🆗 🆙 🆒 🆕 🆓 0️⃣ 1️⃣ 2️⃣ 3️⃣ 4️⃣ 5️⃣ 6️⃣ 7️⃣ 8️⃣ 9️⃣ 🔟 🔢 #️⃣ *️⃣ ⏏️ ▶️ ⏸ ⏯ ⏹ ⏺ ⏭ ⏮ ⏩ ⏪ ⏫ ⏬ ◀️ 🔼 🔽 ➡️ ⬅️ ⬆️ ⬇️ ↗️ ↘️ ↙️ ↖️ ↕️ ↔️ ↪️ ↩️ ⤴️ ⤵️ 🔀 🔁 🔂 🔄 🔃 🎵 🎶 ➕ ➖ ➗ ✖️ ♾ 💲 💱 ™️ ©️ ®️ 〰️ ➰ ➿ 🔚 🔙 🔛 🔝 🔜 ✔️ ☑️ 🔘 🔴 🟠 🟡 🟢 🔵 🟣 ⚫️ ⚪️ 🟤 🔺 🔻 🔸 🔹 🔶 🔷 🔳 🔲 ▪️ ▫️ ◾️ ◽️ ◼️ ◻️ 🟥 🟧 🟨 🟩 🟦 🟪 ⬛️ ⬜️ 🟫 🔈 🔇 🔉 🔊 🔔 🔕 📣 📢 👁‍🗨 💬 💭 🗯 ♠️ ♣️ ♥️ ♦️ 🃏 🎴 🀄️ 🕐 🕑 🕒 🕓 🕔 🕕 🕖 🕗 🕘 🕙 🕚 🕛 🕜 🕝 🕞 🕟 🕠 🕡 🕢 🕣 🕤 🕥 🕦 🕧</string>
    <string name="helper">도움말</string>
    <string name="helper_what_the_function">기능 설명</string>
    <string name="helper_function_add">메모/일정 추가</string>
    <string name="helper_function_delete">메모/일정 삭제</string>
    <string name="helper_function_finish">메모/일정 종료</string>
    <string name="helper_function_alarm">알람/상단바 고정 관련</string>
    <string name="helper_function_edit">메모/일정 수정</string>
    <string name="helper_function_detail">세부 메모/일정</string>
    <string name="helper_function_detail_menu">세부 메뉴(메모/일정 공유, 복사 기능 등)</string>
    <string name="helper_mail_to_developer">개발자에게 문의하기</string>
    <string name="helper_blog_to_developer">개발자 블로그</string>
    <string name="helper_github_to_developer">개발자 깃허브</string>
    <string name="helper_open_source">Alamemo는 깃허브에 소스코드가 공개되어 있습니다 !</string>
    <string name="helper_app_version">앱 버전 :</string>
    <string name="next">다음</string>
    <string name="prev">이전</string>
    <string name="helper_function_add_description_1">우측 상단 위에\n메모 추가 버튼을 누릅니다.</string>
    <string name="helper_function_add_description_2">유형이 메모인 경우에는\n메모할 내용을\n입력할 수 있습니다.</string>
    <string name="helper_function_add_description_3">아이콘을 누르면\n메모와 저장할\n아이콘을 선택할 수 있습니다.</string>
    <string name="helper_function_add_description_4">유형이 일정인 경우에는\n날짜와 시간을\n선택할 수 있습니다.</string>
    <string name="helper_function_add_description_5">메모와 마찬가지로\n아이콘과 일정의 이름을\n적으시면 됩니다.</string>
    <string name="helper_function_add_description_6">일정의 경우에는\n알람 기능을\n사용하실 수 있습니다.</string>
    <string name="helper_function_add_description_7">유형이 반복 일정인 경우에는\n요일을 선택할 수 있습니다.</string>
    <string name="helper_function_add_description_8">반복 일정의 경우\n해당 요일에 날의\n알람 시간에 맞춰서 알람이 울립니다.</string>
    <string name="helper_function_delete_description_1">메모를 좌/우로\n스와이프 합니다.</string>
    <string name="helper_function_delete_description_2">메모가 삭제되며\n하단에 스낵바가 나옵니다.</string>
    <string name="helper_function_delete_description_3">삭제 취소를 누르면\n삭제가 취소됩니다.</string>
    <string name="helper_function_edit_description_1">메모의 우측에 있는\n수정 버튼을 누릅니다.</string>
    <string name="helper_function_edit_description_2">메모 수정 창이 나옵니다.\n수정할 내용을 입력하고\n저장하기를 누릅니다.</string>
    <string name="helper_function_edit_description_3">메모가 수정되어서\n저장됩니다.</string>
    <string name="helper_function_finish_description_1">메모의 아이콘 왼쪽에 있는\n체크 박스를 체크합니다.</string>
    <string name="helper_function_finish_description_2">메모가 종료처리 되며\n[종료]탭으로 이동됩니다.\n이렇게 종료된 메모는\n알람, 상단바 고정이 해제됩니다.</string>
    <string name="helper_function_detail_description_1">메모를 누릅니다.</string>
    <string name="helper_function_detail_description_2">메모의 세부 메모\n페이지로 이동됩니다.\n여기서 세부 메모/일정을\n추가할 수 있습니다.</string>
    <string name="helper_function_detail_description_3">메모의 세부 유형은\n메모로 고정되고\n일정의 세부 유형은\n일정으로 고정됩니다.</string>
    <string name="helper_function_alarm_fix_noti_description_1">일정은 알람 기능을\n사용할 수 있습니다.\n메모를 작성/수정할 때\n시작 날짜와 알람 시간을\n설정할 수 있습니다.</string>
    <string name="helper_function_alarm_fix_noti_description_2">반복 일정도 알람 기능을 사용할 수 있습니다.</string>
    <string name="helper_function_alarm_fix_noti_description_3">알람을 설정하면\n알람 시간에 맞춰서\n알람이 오게 됩니다.\n일정과 반복 일정은 각각\n다른 형식으로 알람이 갑니다.</string>
    <string name="helper_function_alarm_fix_noti_description_4">상단바 고정을 설정하면\n상단바에 메모에 대한 정보가\n고정됩니다.\n각 유형들은 다른 형식으로\n고정됩니다.</string>
    <string name="helper_function_alarm_fix_noti_description_5">상단바 고정과 알람 기능을\n같이 사용할 수 있습니다.</string>
    <string name="helper_function_share_copy_1">여행의 세부 일정을\n위처럼 짠 뒤에\n공유를 하고싶을 수 있습니다.</string>
    <string name="helper_function_share_copy_2">이 때 메모/일정을 길게 누릅니다.</string>
    <string name="helper_function_share_copy_3">아래에서 메뉴 창이 나오게 되며\n원하는 기능을 선택할 수 있습니다.\n카카오톡으로 일정을\n공유해 보겠습니다.</string>
    <string name="helper_function_share_copy_4">위 이미지처럼 다른사람에게\n일정이 공유됩니다.</string>
    <string name="helper_function_share_copy_5">세부 일정은\n한 번만 누르면 위 메뉴창이\n나오게 됩니다.</string>
    <string name="failed_to_send_mail">메일 보내기에 실패했습니다.</string>
    <string name="memo_menu_share">메시지, 메신저로 메모/일정 공유하기</string>
    <string name="memo_menu_copy">메모/일정 복사</string>
</resources>